# LDProtocol

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json  test.txt
LDProtocol/: CMakeLists.txt  LDProtocol.cpp  LDProtocol.h  interface.h
LDProtocol/crypto/: ecdh.cc  ecdh.h  md5.cc  md5.h  tea.cc  tea.h
LDProtocol/tencent/: protocol.h
LDProtocol/test/: main.cc
LDProtocol/tlv/: tlv.h
LDProtocol/utils/: bin.cc  bin.h  cast.cc  cast.h  exceptions.cc  exceptions.h  hexstring.cc  hexstring.h  random.cc  random.h
OICQProtocol/: CMakeLists.txt
OICQProtocol/protocol/: IDevice.h  IUserInfo.h  tlv.cc  userinfo.cc
TProtocol/: CMakeLists.txt  index.cc
TProtocol/protocol/: IUserInfo.h  device.cc  index.h  tlv.cc  tlv.h
TProtocol/wtlogin/: build.cc  index.h  tlvs.cc  tlvs.hpp
